# locky-local-agent

./: .claudeignore  .cursorrules  .flake8  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.en.md  README.md  TUTORIAL.md  cli.py  config.py  graph.py  pyproject.toml  requirements.txt
actions/: __init__.py  cleanup.py  commit.py  deps_check.py  env_template.py  format_code.py  hook.py  jira.py  pipeline.py  security_scan.py  shell_command.py  test_runner.py  todo_collector.py  update.py
agents/: __init__.py
agents/coder/: __init__.py  core_developer.py  lead.py  refactor_formatter.py
agents/planner/: __init__.py  context_analyzer.py  lead.py  task_breaker.py
agents/prompts/: coder_lead.md  context_analyzer.md  core_developer.md  planner_lead.md  qa_validator.md  refactor_formatter.md  security_auditor.md  task_breaker.md  tester_lead.md
agents/tester/: __init__.py  lead.py  qa_validator.py  security_auditor.py
context/: session-2026-03-25.md
docs/00-pm/: locky-v2-improvement.prd.md
docs/03-analysis/: locky-agent.analysis.md  locky-v2-overhaul.analysis.md  locky-v3-extensibility.analysis-v0.0.1.md  locky-v3-ux-reliability.analysis-v0.0.1.md
docs/04-report/: changelog.md
docs/evaluation/: locky-quantitative-evaluation.md
locky/: __init__.py
locky/agents/: ask_agent.py  commit_agent.py  edit_agent.py
locky/core/: agent.py  context.py  session.py
locky/runtime/: local.py
locky_cli/: __init__.py  autopilot.py  config_loader.py  context.py  fs_context.py  lang_detect.py  main.py  permissions.py  repl.py
pipeline/: __init__.py  orchestrator.py  runner.py  state.py
scripts/: install.sh
states/: __init__.py  state.py
tests/: conftest.py  test_agents_ask.py  test_agents_edit.py  test_cleanup.py  test_cli_commands.py  test_cli_v2_commands.py  test_cli_v3_commands.py  test_config_loader.py  test_config_loader_v3p2.py  test_context.py  test_core_agent.py  test_core_context.py  test_core_session.py  test_deps_check.py  test_editor.py  test_env_template.py  test_fix_logic.py  test_format_code.py  test_hook.py  test_indexer.py  test_jira.py  test_lang_detect.py  test_llm_anthropic.py  test_llm_base.py  test_llm_litellm.py  test_llm_ollama.py  test_llm_openai.py  test_llm_registry.py  test_llm_registry_v3p2.py  test_llm_retry.py  test_llm_streaming.py  test_llm_tracker.py  test_mcp_client.py  test_mcp_registry.py  test_mcp_server.py  test_ollama_guard.py  test_ollama_stream.py  test_pipeline.py  test_planner.py  test_plugin_loader.py  (+21 more)
tools/: __init__.py  editor.py  indexer.py  jira_client.py  mcp_filesystem.py  mcp_git.py  ollama_client.py  ollama_guard.py  planner.py  repo_map.py  session_manager.py
ui/: app.py  tui.py
(+70 files in other folders)
