[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "locky-agent"
version = "0.3.0"
description = "100% 로컬 AI 개발 에이전트 — Planner, Coder, Tester"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "gitpython>=3.1.40",
    "chainlit>=1.3.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "anyio>=4.0.0",
    "pydantic>=2.0.0",
    "prompt-toolkit>=3.0.43",
]

[project.scripts]
locky = "locky_cli.main:main"

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["actions*", "tools*", "locky_cli*", "ui*"]

[tool.setuptools]
py-modules = ["config"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=actions --cov=locky_cli --cov-report=term-missing"
