[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "locky-agent"
version = "1.0.0"
description = "Natural Language to Shell Command -- 100% local CLI tool powered by Ollama"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.43",
]

[project.scripts]
locky = "locky_cli.main:main"

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["actions*", "tools*", "locky_cli*"]

[tool.setuptools]
py-modules = ["config"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=actions --cov=locky_cli --cov=tools --cov-report=term-missing"
